--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -29,19 +29,19 @@
 .menu{
     display: flex;
     gap: 24px;
-        position: fixed;
-        top: 0;
+        // position: fixed;
+        // top: 0;
         // right: -120%;
 
-        width: 100%;
-        height: 100dvh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        z-index: 2;
-        background-color: gray;
-        transition: 0.5s;
+        // width: 100%;
+        // height: 100dvh;
+        // display: flex;
+        // flex-direction: column;
+        // align-items: center;
+        // justify-content: center;
+        // z-index: 2;
+        // background-color: gray;
+        // transition: 0.5s;
 
 
     a{
